Database System Module update

--- a/ManagingAdmissionContest/ManagingAdmissionContest.csproj
+++ b/ManagingAdmissionContest/ManagingAdmissionContest.csproj
@@ -79,6 +79,7 @@
   <ItemGroup>
     <Compile Include="Applicant.cs" />
     <Compile Include="ApplicantDatabase.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
